<?xml version="1.0"?>
<package format="2">

  <name>camera_utils</name>
  <version>1.0.0</version>
  <description>The camera utils package</description>

  <maintainer email="thulioguilherme@hotmail.com">Thulio Guilherme Amorim</maintainer>
  <author email="thulioguilherme@hotmail.com">Thulio Guilherme Amorim</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_calibration_parsers</depend>
  
  <export>
    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
